--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mooyeon Kim</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/main.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/main.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/main.png">
     <link rel="manifest" href="favicons/site.webmanifest">
     <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">  
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#010101">
-    <meta name="description" content="A responsive web portfolio designed by Hari">
-    <meta name="keywords" content="HTML, CSS, JavaScript, Portfolio">
+    <meta name="description" content="Mooyeon Kim's web portfolio">
+    <meta name="keywords" content="Portfolio, HTML, CSS, JavaScript">
     <meta name="author" content="Mooyeon Kim (김무연)">
     <link rel="stylesheet" href="resources/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -124,7 +124,7 @@
                     <p>C++</p>
                 </div>
                 <div class="skill-card">
-                    <img src="resources/icons/c#.png" class="skill-icon" style="transform: scale(1.8);" alt="">
+                    <img src="resources/icons/cs.png" class="skill-icon" style="transform: scale(1.8);" alt="">
                     <p>C#</p>
                 </div>                
                 <div class="skill-card">
