--- a/index.html
+++ b/index.html
@@ -146,33 +146,16 @@
                 <div class="skill-card">
                     <img src="resources/icons/HtmlCss.png" class="skill-icon" style="transform: scale(1.7);" alt="">
                     <p>HTML/CSS</p>
-                </div>                
+                </div>  
+                <div class="skill-card">
+                    <img src="resources/icons/matlab.png" class="skill-icon" style="transform: scale(1.5);" alt="GCP">
+                    <p>MATLAB</p>
+                </div>                  
             </div>
         </div>
     
         <div class="skills-category">
-            <h3>Frameworks and Libraries</h3>
-            <br>
-            <div class="skills-container">
-                <div class="skill-card">
-                    <img src="resources/icons/spring-boot.svg" class="skill-icon" alt="">
-                    <p>Spring Boot</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fa-brands fa-angular skill-icon"></i>
-                    <p>Angular</p>
-                </div>
-                <div class="skill-card"><img src="resources/icons/bootstrap.png" class="skill-icon" alt="">
-                    <p>Bootstrap</p>  </div>              
-                <div class="skill-card">
-                    <img src="resources/icons/junit5-logo.png" class="skill-icon" alt="">
-                    <p>Mockito</p>
-                </div>
-            </div>
-        </div>
-    
-        <div class="skills-category">
-            <h3>Tools</h3>
+            <h3>Tools and Engines</h3>
             <br>
             <div class="skills-container">
                 <div class="skill-card">
@@ -184,9 +167,17 @@
                     <p>VS Code</p>
                 </div>
                 <div class="skill-card">
-                    <img src="resources/icons/matlab.png" class="skill-icon" style="transform: scale(1.5);" alt="GCP">
-                    <p>MATLAB</p>
-                </div>  
+                    <img src="resources/icons/ubuntu.png" class="skill-icon" style="transform: scale(1.5);" alt="GCP">
+                    <p>Ubuntu</p>
+                </div>
+                <div class="skill-card">
+                    <img src="resources/icons/micro.png" class="skill-icon" style="transform: scale(1.5);" alt="GCP">
+                    <p>Microcontroller</p>
+                </div>                 
+                <div class="skill-card">
+                    <img src="resources/icons/unity.png" class="skill-icon" style="transform: scale(1.5);" alt="GCP">
+                    <p>Unity</p>
+                </div>    
                 <div class="skill-card">
                     <img src="resources/icons/pycharm.png" class="skill-icon" style="transform: scale(1.5);" alt="GCP">
                     <p>Pycharm</p>
