--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
         <p>Check out some of my recent work.</p>
         <div class="projects-container">
             <div class="project-card">
-                <img src="resources/Images/AI.png" alt="Markdown-Supported AI Webpage">
-                <h3>Markdown-Supported AI Webpage</h3>
-                <p>A simple web app integrated with Gemini.</p>
+                <img src="resources/Images/noggin.png" alt="Smart Hard Hat">
+                <h3>"Noggin" Smart Hard Hat</h3>
+                <p>A smart constuction helmet, allows real-time communication between users and supervisor about users various status.</p>
                 <div class="project-links">
-                    <a href="https://thughari.github.io/AI" target="_blank" class="btn demo-btn">Demo</a>
-                    <a href="https://github.com/thughari/AI" target="_blank" class="btn code-btn">Code</a>
+                    <a href="https://github.com/Mooyeonkim628/ECE477" target="_blank" class="btn code-btn">Code</a>
                 </div>
             </div>
             <div class="project-card">
