--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Check out some of my recent work.</p>
         <div class="projects-container">
             <div class="project-card">
-                <img src="resources/Images/noggin.png" alt="Smart Hard Hat">
+                <img src="resources/Images/noggin.jpg" alt="Smart Hard Hat">
                 <h3>"Noggin" Smart Hard Hat</h3>
                 <p>A smart constuction helmet, allows real-time communication between users and supervisor about users various status.</p>
                 <div class="project-links">
