--- a/index.html
+++ b/index.html
@@ -86,12 +86,11 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="resources/Images/music-player.png" alt="Music Player">
-                <h3>Music Player</h3>
-                <p>A music player built with HTML CSS and JS</p>
+                <img src="resources/Images/api.png" alt="API">
+                <h3>OpenAPI generated FastAPI server</h3>
+                <p>An API which is connected to a backend server. The API can receive requests to upload, update, download, and rate individual packages.</p>
                 <div class="project-links">
-                    <a href="https://thughari.github.io/music-player/" target="_blank" class="btn demo-btn">Demo</a>
-                    <a href="https://github.com/thughari/music-player" target="_blank" class="btn code-btn">Code</a>
+                    <a href="https://github.com/Mooyeonkim628/project-2-project-2-24" target="_blank" class="btn code-btn">Code</a>
                 </div>
             </div>
             <div class="project-card">
