--- a/index.html
+++ b/index.html
@@ -94,12 +94,11 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="resources/Images/NSP.png" alt="National Scholarship Portal">
-                <h3>National Scholarship Portal</h3>
-                <p>Scholarship project built by using Angular 8</p>
+                <img src="resources/Images/zork.png" alt="Zork">
+                <h3>Zork Project</h3>
+                <p>Text based dungeon exploring game using C++</p>
                 <div class="project-links">
-                    <a href="https://thughari.github.io/NationalScholarshipPortal-FrontEnd/" target="_blank" class="btn demo-btn">Demo</a>
-                    <a href="https://github.com/thughari/NationalScholarshipPortal-FrontEnd" target="_blank" class="btn code-btn">Code</a>
+                    <a href="https://github.com/Mooyeonkim628/zork-project" target="_blank" class="btn code-btn">Code</a>
                 </div>
             </div>
         </div>
@@ -125,6 +124,10 @@
                     <img src="resources/icons/cs.png" class="skill-icon" style="transform: scale(1.8);" alt="">
                     <p>C#</p>
                 </div>                
+                <div class="skill-card">
+                    <img src="resources/icons/verilog.png" class="skill-icon" style="transform: scale(1.5);" alt="GCP">
+                    <p>Verilog</p>
+                </div>  
                 <div class="skill-card">
                     <img src="resources/icons/python.png" class="skill-icon" alt="">
                     <p>Python</p>
