--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
                 </div>
             </div>
             <div class="project-card">
+                <img src="resources/Images/iot.png" alt="Motion sensor with IoT">
+                <h3>Motion sensor</h3>
+                <p>Motion sensor implemented with esp32 and python, sending alert to user applying IoT</p>
+                <div class="project-links">
+                    <a href="https://github.com/Mooyeonkim628/motion-detector" target="_blank" class="btn code-btn">Code</a>
+                </div>
+            </div>
+            <div class="project-card">
                 <img src="resources/Images/zork.png" alt="Zork">
                 <h3>Zork Project</h3>
                 <p>Text based dungeon exploring game using C++</p>
