--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="resources/Images/iot.png" alt="Motion sensor with IoT">
+                <img src="resources/Images/iot.jpg" alt="Motion sensor with IoT">
                 <h3>Motion sensor</h3>
                 <p>Motion sensor implemented with esp32 and python, sending alert to user applying IoT</p>
                 <div class="project-links">
