--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         <div class="about-me">
             <h2>About Me</h2>
-            <p>I am an aspiring developer interested in embedded systems and game development. I enrolled at the State University of New York in 2017 and transferred to Purdue University in 2019, graduating in 2022. 
+            <p>I am an aspiring developer interested in embedded systems and game development. I earned a bachelor's degree in Electrical and Computer Engineering at Purdue University in 2022. 
             I completed alternative military service as an administrative assistant at Jeodong Middle School until 2024. I hopes to pursue graduate studies in 2025.
             I am passionate about software development for embedded systems and enjoys developing games as a hobby.
             I love to bring new ideas and share them with collaborators.</p>
@@ -75,7 +75,7 @@
 
     <section class="projects-section" id="projects">
         <h2>My Projects</h2>
-        <p>Check out some of my recent work.</p>
+        <p>Here are my recent works.</p>
         <div class="projects-container">
             <div class="project-card">
                 <img src="resources/Images/noggin.jpg" alt="Smart Hard Hat">
@@ -114,7 +114,7 @@
 
     <section class="skills-section" id="skills"> #skills
         <h2>My Skills</h2>
-        <p>Here are some of the technologies I'm proficient in.</p>
+        <p>Here are technologies I'm proficient in.</p>
         
         <div class="skills-category">
             <h3>Programming Languages and Markup Languages</h3>
