--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </section>
 
-    <section class="skills-section" id="skills"> #skills
+    <section class="skills-section" id="skills"> 
         <h2>My Skills</h2>
         <p>Here are technologies I'm proficient in.</p>
         
