--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
         </div>
     </section>
 
+    <section class="personal-interests">
+        <h2>Personal Interests</h2>
+        <p>In my free time, I enjoy exploring the latest advancements in embedded technology and experimenting with new game development tools. I am also an avid reader of science fiction novels and enjoy hiking and outdoor activities. These hobbies not only provide relaxation but also inspire creativity in my professional work.</p>
+    </section>
+    
     <section class="contact-section" id="contact">
         <h2>Get in Touch</h2>
         <p>Have a project in mind? Let's chat!</p>
