--- a/index.html
+++ b/index.html
@@ -199,10 +199,23 @@
         </div>
     </section>
 
-    <section class="personal-interests">
+    <section class="personal-interests" id="interests">
         <h2>Personal Interests</h2>
         <p>In my free time, I enjoy exploring the latest advancements in embedded technology and experimenting with new game development tools. I am also an avid reader of science fiction novels and enjoy hiking and outdoor activities. These hobbies not only provide relaxation but also inspire creativity in my professional work.</p>
+
+        <div class="projects-container">
+            <div class="project-card">
+                <img src="resources/Images/noggin.jpg" alt="Smart Hard Hat">
+                <h3>Hobbies</h3>
+                <p>hobby</p>
+                <div class="project-links">
+                    <a href="https://github.com/Mooyeonkim628/ECE477" target="_blank" class="btn code-btn">Code</a>
+                </div>
+            </div>
+        </div>
     </section>
+
+
     
     <section class="contact-section" id="contact">
         <h2>Get in Touch</h2>
