--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#skills" class="nav-link">Skills</a></li>
+                        <a href="#skills" class="nav-link">Skills</a></li>                  
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -201,7 +201,7 @@
 
     <section class="projects-section" id="projects">
         <h2>Personal Interests</h2>
-        <p>In my free time, I enjoy exploring the latest advancements in embedded technology and experimenting with new game development tools. I am also an avid reader of science fiction novels and enjoy hiking and outdoor activities. These hobbies not only provide relaxation but also inspire creativity in my professional work.</p>
+        <p>In my free time..</p>
 
         <div class="projects-container">
             <div class="project-card">
