--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#skills" class="nav-link">Skills</a></li>                  
+                        <a href="#skills" class="nav-link">Skills</a></li>     
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Personal Interest">Interests</a>
+                    </li>                    
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
