--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <li class="nav-item">
                         <a href="#skills" class="nav-link">Skills</a></li>     
                     <li class="nav-item">
-                        <a class="nav-link" href="#Personal Interest">Interests</a>
-                    </li>                    
+                        <a class="nav-link" href="#interests">Interests</a>
+                    </li>               
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -202,7 +202,7 @@
         </div>
     </section>
 
-    <section class="projects-section" id="projects">
+    <section class="personal-interests-section" id="interests">
         <h2>Personal Interests</h2>
         <p>In my free time..</p>
 
