--- a/index.html
+++ b/index.html
@@ -203,9 +203,30 @@
     </section>
 
     <section class="personal-interests-section" id="interests">
-        <h2>Personal Interests</h2>
+        <h3>Personal Interests</h3>
         <p>In my free time..</p>
-
+        <div class="personal-interests--container">
+            <div class="personal-interests-card">
+                <img src="resources/Images/noggin.jpg" alt="Smart Hard Hat">
+                <h3>"Noggin" Smart Hard Hat</h3>
+                <p>A smart constuction helmet, allows real-time communication between users and supervisor about users various status.</p>
+            </div>
+            <div class="personal-interests-card">
+                <img src="resources/Images/api.png" alt="API">
+                <h3>OpenAPI generated FastAPI server</h3>
+                <p>An API which is connected to a backend server. The API can receive requests to upload, update, download, and rate individual packages.</p>
+            </div>
+            <div class="personal-interests-card">
+                <img src="resources/Images/iot.jpg" alt="Motion sensor with IoT">
+                <h3>Motion sensor</h3>
+                <p>Motion sensor implemented with esp32 and python, sending alert to user applying IoT</p>
+            </div>
+            <div class="personal-interests-card">
+                <img src="resources/Images/zork.png" alt="Zork">
+                <h3>Zork Project</h3>
+                <p>Text based dungeon exploring game using C++</p>
+            </div>
+        </div>
     </section>
 
 
