--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <div class="profile-container">
         <div class="header">
-            <img src="resources/Images/Mookim.jpg" alt="Profile Picture" class="profile-pic"> 
+            <img src="resources/Images/moo.jpg" alt="Profile Picture" class="profile-pic"> 
             <h1>Mooyeon Kim</h1>
             <p>Applicants seeking master's degree</p>
         </div>
@@ -203,23 +203,18 @@
     </section>
 
     <section class="personal-interests-section" id="interests">
-        <h3>Personal Interests</h3>
-        <p>In my free time..</p>
+        <h3>Other</h3>
+        <p>Personally Stuff</p>
         <div class="personal-interests-container">
             <div class="personal-interests-card">
-                <img src="resources/Images/noggin.jpg" alt="Smart Hard Hat">
-                <h3>"Noggin" Smart Hard Hat</h3>
-                <p>A smart constuction helmet, allows real-time communication between users and supervisor about users various status.</p>
+                <img src="resources/Images/pka.jpg" alt="Cultural Activity">
+                <h3>Cultural Event</h3>
+                <p>As an event organizer for PKA, I planned events that connected local Korean community members with other students eager to engage in cultural exchange.</p>
             </div>
             <div class="personal-interests-card">
-                <img src="resources/Images/api.png" alt="API">
-                <h3>OpenAPI generated FastAPI server</h3>
-                <p>An API which is connected to a backend server. The API can receive requests to upload, update, download, and rate individual packages.</p>
-            </div>
-            <div class="personal-interests-card">
-                <img src="resources/Images/iot.jpg" alt="Motion sensor with IoT">
-                <h3>Motion sensor</h3>
-                <p>Motion sensor implemented with esp32 and python, sending alert to user applying IoT</p>
+                <img src="resources/Images/baseball.png" alt="baseball">
+                <h3>Sports</h3>
+                <p>I enjoy various sports, but I love baseball the most. During my undergraduate studies, I was part of a baseball team.</p>
             </div>
         </div>
     </section>
