--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <p>As an event organizer for PKA, I planned events that connected local Korean community members with other students eager to engage in cultural exchange.</p>
             </div>
             <div class="personal-interests-card">
-                <img src="resources/Images/baseball.png" alt="baseball">
+                <img src="resources/Images/baseball.jpg" alt="baseball">
                 <h3>Sports</h3>
                 <p>I enjoy various sports, but I love baseball the most. During my undergraduate studies, I was part of a baseball team.</p>
             </div>
