--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <section class="personal-interests-section" id="interests">
         <h3>Other</h3>
-        <p>Personally Stuff</p>
+        <p>Personal Stuff</p>
         <div class="personal-interests-container">
             <div class="personal-interests-card">
                 <img src="resources/Images/pka.jpg" alt="Cultural Activity">
