--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li class="nav-item">
                         <a href="#skills" class="nav-link">Skills</a></li>     
                     <li class="nav-item">
-                        <a class="nav-link" href="#interests">Interests</a>
+                        <a class="nav-link" href="#interests">Other</a>
                     </li>               
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
