--- a/index.html
+++ b/index.html
@@ -216,9 +216,13 @@
                 <h3>Sports</h3>
                 <p>I enjoy various sports, but I love baseball the most. During my undergraduate studies, I was part of a baseball team.</p>
             </div>
+            <div class="personal-interests-card">
+                <img src="resources/Images/game.jpg" alt="Game">
+                <h3>Game Developing</h3>
+                <p>I am currently developing a top-down view game using Unity. I hope you'll be able to check it out soon!</p>
+            </div>            
         </div>
     </section>
-
 
     
     <section class="contact-section" id="contact">
