--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p>Here are my recent works.</p>
         <div class="projects-container">
             <div class="project-card">
-                <img src="resources/Images/noggin.jpg" alt="Smart Hard Hat">
+                <img src="resources/Images/noggin2.jpg" alt="Smart Hard Hat">
                 <h3>"Noggin" Smart Hard Hat</h3>
                 <p>A smart constuction helmet, allows real-time communication between users and supervisor about users various status.</p>
                 <div class="project-links">
