--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
                     <a href="https://github.com/Mooyeonkim628/zork-project" target="_blank" class="btn code-btn">Code</a>
                 </div>
             </div>
+            <div class="project-card">
+                <img src="resources/Images/junkmail.jpg" alt="mail">
+                <h3>Junk mail filter</h3>
+                <p>Junk mail filter that you can choose your own filtered word</p>
+                <div class="project-links">
+                    <a href="https://github.com/Mooyeonkim628/junkmail-filter" target="_blank" class="btn code-btn">Code</a>
+                </div>
+            </div>            
         </div>
     </section>
 
