--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="project-card">
                 <img src="resources/Images/iot.jpg" alt="Motion sensor with IoT">
                 <h3>Motion sensor</h3>
-                <p>Motion sensor implemented with esp32 and python, sending alert to user applying IoT</p>
+                <p>A motion sensor implemented with ESP32 and Python, sending alerts to users by applying IoT.</p>
                 <div class="project-links">
                     <a href="https://github.com/Mooyeonkim628/motion-detector" target="_blank" class="btn code-btn">Code</a>
                 </div>
@@ -107,7 +107,7 @@
             <div class="project-card">
                 <img src="resources/Images/zork.png" alt="Zork">
                 <h3>Zork Project</h3>
-                <p>Text based dungeon exploring game using C++</p>
+                <p>A text-based dungeon exploration game using C++.</p>
                 <div class="project-links">
                     <a href="https://github.com/Mooyeonkim628/zork-project" target="_blank" class="btn code-btn">Code</a>
                 </div>
@@ -115,7 +115,7 @@
             <div class="project-card">
                 <img src="resources/Images/junkmail.jpg" alt="mail">
                 <h3>Junk mail filter</h3>
-                <p>Junk mail filter that you can choose your own filtered word</p>
+                <p>A junk mail filter that allows you to choose your own filtered words.</p>
                 <div class="project-links">
                     <a href="https://github.com/Mooyeonkim628/junkmail-filter" target="_blank" class="btn code-btn">Code</a>
                 </div>
