--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                 </div>
             </div>
             <div class="project-card">
+                <img src="resources/Images/cycle.jpg" alt="cycle">
+                <h3>Data Science</h3>
+                <p>A statistical analysis of the number of bicycle users in Manhattan based on weather conditions.</p>
+                <div class="project-links">
+                    <a href="https://github.com/Mooyeonkim628/Weather-Impact-On-Cycling" target="_blank" class="btn code-btn">Code</a>
+                </div>            
+            <div class="project-card">
                 <img src="resources/Images/junkmail.jpg" alt="mail">
                 <h3>Junk mail filter</h3>
                 <p>A junk mail filter that allows you to choose your own filtered words.</p>
